--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <header>
         <nav>
-            <svg style="display:inline; margin:4px 0 0 20px; opacity:0.6;  width: 32px; height:32px;">
+            <svg id="collapsaple">
                 <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path>
             </svg>
 
-            <svg style="display: inline-block; margin:0 0 0 20px; width: 90px; height:20px;">
+            <svg id="icon_logo">
 
                 <path
                     d="M27.9727 3.12324C27.6435 1.89323 26.6768 0.926623 25.4468 0.597366C23.2197 2.24288e-07 14.285 0 14.285 0C14.285 0 5.35042 2.24288e-07 3.12323 0.597366C1.89323 0.926623 0.926623 1.89323 0.597366 3.12324C2.24288e-07 5.35042 0 10 0 10C0 10 2.24288e-07 14.6496 0.597366 16.8768C0.926623 18.1068 1.89323 19.0734 3.12323 19.4026C5.35042 20 14.285 20 14.285 20C14.285 20 23.2197 20 25.4468 19.4026C26.6768 19.0734 27.6435 18.1068 27.9727 16.8768C28.5701 14.6496 28.5701 10 28.5701 10C28.5701 10 28.5677 5.35042 27.9727 3.12324Z"
@@ -48,34 +48,33 @@
             <form id="search_form" action="serach">
                 <input id="search_input" type="search" placeholder="Ara">
                 <button id="search_btn" type="button">
-                    <svg id="search_icon" style=" display: inline;  width: 20px; height:20px; margin:auto;">
+                    <svg id="search_icon">
                         <path
                             d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z">
                         </path>
                     </svg>
                 </button>
 
-                <svg id="micro_icon"
-                    style="display: inline-block; margin-left: 20px;   width: 32px; height:32px; opacity: 0.6;">
+                <svg id="micro_icon">
                     <path
                         d="M12 14c1.66 0 2.99-1.34 2.99-3L15 5c0-1.66-1.34-3-3-3S9 3.34 9 5v6c0 1.66 1.34 3 3 3zm5.3-3c0 3-2.54 5.1-5.3 5.1S6.7 14 6.7 11H5c0 3.41 2.72 6.23 6 6.72V21h2v-3.28c3.28-.48 6-3.3 6-6.72h-1.7z">
                     </path>
                 </svg>
             </form>
 
-            <svg style="display: inline; margin-left: 24px; width: 32px; height:32px; opacity: 0.6;">
+            <svg id="make_video_icon">
                 <path
                     d="M17 10.5V7c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h12c.55 0 1-.45 1-1v-3.5l4 4v-11l-4 4zM14 13h-3v3H9v-3H6v-2h3V8h2v3h3v2z">
                 </path>
             </svg>
 
-            <svg style="display: inline; margin-left: 24px;  width: 32px; height:32px; opacity: 0.6;">
+            <svg id="app_icon">
                 <path
                     d="M4 8h4V4H4v4zm6 12h4v-4h-4v4zm-6 0h4v-4H4v4zm0-6h4v-4H4v4zm6 0h4v-4h-4v4zm6-10v4h4V4h-4zm-6 4h4V4h-4v4zm6 6h4v-4h-4v4zm0 6h4v-4h-4v4z">
                 </path>
             </svg>
 
-            <svg style="display: inline; margin-left: 24px; width: 24px; height:24px; opacity: 0.6;">
+            <svg id="notification_icon">
                 <path
                     d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.9 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z">
                 </path>
@@ -93,34 +92,32 @@
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
 
-                <p style="color: blue;">#SUSAMAM</p>
+                <p class="video-name">#SUSAMAM</p>
                 <br>
                 <p class="who">51.847.318 görüntüleme • 5 Eyl 2019</p>
                 <div class="commend">
-                    <svg style="display: inline; fill: blue; margin:0 0 0 50px; width: 24px; height:24px;">
+                    <svg id="like_btn_icon">
                         <path
                             d="M1 21h4V9H1v12zm22-11c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.59 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-1.91l-.01-.01L23 10z">
                         </path>
                     </svg>
-                    <p class="who" style="color: blue;">2,1 MN</p>
-                    <svg style="display: inline; fill:darkgray; margin:0 0 0 10px; width: 24px; height: 24px;">
-                        <g class="style-scope yt-icon">
-                            <path
-                                d="M15 3H6c-.83 0-1.54.5-1.84 1.22l-3.02 7.05c-.09.23-.14.47-.14.73v1.91l.01.01L1 14c0 1.1.9 2 2 2h6.31l-.95 4.57-.03.32c0 .41.17.79.44 1.06L9.83 23l6.59-6.59c.36-.36.58-.86.58-1.41V5c0-1.1-.9-2-2-2zm4 0v12h4V3h-4z"
-                                class="style-scope yt-icon"></path>
-                        </g>
+                    <p id="like_number" class="who">2,1 MN</p>
+                    <svg id="dont_like_btn">
+                        <path
+                            d="M15 3H6c-.83 0-1.54.5-1.84 1.22l-3.02 7.05c-.09.23-.14.47-.14.73v1.91l.01.01L1 14c0 1.1.9 2 2 2h6.31l-.95 4.57-.03.32c0 .41.17.79.44 1.06L9.83 23l6.59-6.59c.36-.36.58-.86.58-1.41V5c0-1.1-.9-2-2-2zm4 0v12h4V3h-4z"
+                            class="style-scope yt-icon"></path>
                     </svg>
                     <p class="who">61 B</p>
-                    <svg style="display: inline; fill:darkgray; margin:0 0 0 10px; width: 24px; height: 24px;">
+                    <svg id="share_icon">
                         <path d="M14 9V3L22 12L14 21V15C8.44 15 4.78 17.03 2 21C3.11 15.33 6.22 10.13 14 9Z"></path>
                     </svg>
                     <p class="who">PAYLAŞ</p>
-                    <svg style="display: inline; fill:darkgray; margin:0 0 0 10px; width: 24px; height: 24px;">
+                    <svg id="save_icon">
                         <path d="M14 10H2v2h12v-2zm0-4H2v2h12V6zm4 8v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zM2 16h8v-2H2v2z">
                         </path>
                     </svg>
                     <p class="who">KAYDET</p>
-                    <svg style="display: inline; fill:darkgray; margin:0 0 0 10px; width: 24px; height: 24px;">
+                    <svg id="report_icon">
                         <circle cx="5" cy="12" r="2" class="style-scope yt-icon"></circle>
                         <circle cx="12" cy="12" r="2" class="style-scope yt-icon"></circle>
                         <circle cx="19" cy="12" r="2" class="style-scope yt-icon"></circle>
@@ -130,25 +127,27 @@
             <hr>
 
             <div class="media-info">
-                
-                    <div class="singer" style="display: flex; align-items: flex-start">
-                        <img id="img_snr" class="style-scope yt-img-shadow" alt="poster"
-                            src="https://yt3.ggpht.com/ytc/AKedOLQ3QMd2v7OpD75UzfScqp-tRScRy6WyYxPN3mr5GA=s48-c-k-c0x00ffffff-no-rj-mo">
 
-                        <h2 style="height: 20px;">Şanışer
-                            <svg viewbox="0 0 24 24"
-                                style="display: inline; fill: darkgray; margin-left:0px; width: 13px; height: 13px;">
-                                <path fill="none" d="M0 0h24v24H0z" class="style-scope yt-icon"></path>
-                                <path
-                                    d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z">
-                                </path>
-                            </svg>
-                        </h2>
-                        <p class="who" style=" margin:0; padding:0;">991 B abone</p>
-                    </div>
-                    <a class="abone" href="#"><b> ABONE OL</b></a>
+                <div id="chanel">
+                    <img id="img_snr" alt="poster"
+                        src="https://yt3.ggpht.com/ytc/AKedOLQ3QMd2v7OpD75UzfScqp-tRScRy6WyYxPN3mr5GA=s48-c-k-c0x00ffffff-no-rj-mo">
 
-                <p class="who" style="font-size: 15px; color: black; margin-left: 140px; width: 620px;"> <span style="color: blue;">#Susamam</span>  - Şanışer ft. Fuat, Ados, Hayki, Server
+                    <h2>Şanışer
+                        <svg id="singer_icon" viewbox="0 0 24 24">
+                            <path fill="none" d="M0 0h24v24H0z"></path>
+                            <path
+                                d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z">
+                            </path>
+                        </svg>
+                    </h2>
+
+                    <p class="who">991 B abone</p>
+                </div>
+
+                <a class="abone" href="#"><b> ABONE OL</b></a>
+
+                <p id="video_explanation" class="who"> <span class="video-name">#Susamam</span> - Şanışer ft. Fuat,
+                    Ados, Hayki, Server
                     Uraz, Beta, Tahribad-ı İsyan, Sokrat St, Ozbi, Deniz
                     Tekin, Sehabe, Yeis Sensura, Aspova, Defkhan, Aga B, Mirac, Mert Şenel, Kamufle</p>
 
@@ -159,7 +158,7 @@
         <aside>
 
             <div class="aside-video">
-                <img class="style-scope yt-img-shadow" alt="" width="168"
+                <img alt="video aside"
                     src="https://i.ytimg.com/vi/k4CB2jd6_GE/hqdefault.jpg?sqp=-oaymwEbCKgBEF5IVfKriqkDDggBFQAAiEIYAXABwAEG&amp;rs=AOn4CLDVHfsBDscf15bWUAs-PbuURtbDkw">
                 <div>
                     <h2>Şanışer - Ben Kimim? (Official Music Video)</h2>
@@ -171,7 +170,7 @@
 
             </div>
             <div class="aside-video">
-                <img class="style-scope yt-img-shadow" alt="" width="168"
+                <img alt="video aside"
                     src="https://i.ytimg.com/vi/vbvyNnw8Qjg/hqdefault.jpg?sqp=-oaymwEbCKgBEF5IVfKriqkDDggBFQAAiEIYAXABwAEG&amp;rs=AOn4CLB9eKgLYqq9zhsLOtN2FS7DABR02w">
                 <div>
                     <h2>Queen - Bohemian Rhapsody (Live Aid 1985)</h2>
@@ -182,7 +181,7 @@
                 </div>
             </div>
             <div class="aside-video">
-                <img class="style-scope yt-img-shadow" alt="" width="168"
+                <img alt="video aside"
                     src="https://i.ytimg.com/vi/7RW8n4iXZbA/hqdefault.jpg?sqp=-oaymwEbCKgBEF5IVfKriqkDDggBFQAAiEIYAXABwAEG&amp;rs=AOn4CLDqHvUtVGbeBtOdMRwE3FI5fjcf2g">
                 <div>
                     <h2>Mor ve Ötesi - Bir Derdim Var</h2>
@@ -193,7 +192,7 @@
                 </div>
             </div>
             <div class="aside-video">
-                <img class="style-scope yt-img-shadow" alt="" width="168"
+                <img alt="video aside"
                     src="https://i.ytimg.com/vi/pIVG3mDL9RI/hqdefault.jpg?sqp=-oaymwEbCKgBEF5IVfKriqkDDggBFQAAiEIYAXABwAEG&amp;rs=AOn4CLBuQyRU5TVNthhGxdfSAncURng9oA">
                 <div>
                     <h2>maNga - Dunyanin Sonuna Dogmusum</h2>
@@ -204,7 +203,7 @@
                 </div>
             </div>
             <div class="aside-video">
-                <img class="style-scope yt-img-shadow" alt="" width="168"
+                <img alt="video aside"
                     src="https://i.ytimg.com/vi/zd8IFDgQCUc/hqdefault.jpg?sqp=-oaymwEbCKgBEF5IVfKriqkDDggBFQAAiEIYAXABwAEG&amp;rs=AOn4CLDXhNJBMEtzVqtMgWIWLNppwlnFxg">
                 <div>
                     <h2>Barış Manço - Gülpembe</h2>
@@ -215,7 +214,7 @@
                 </div>
             </div>
             <div class="aside-video">
-                <img class="style-scope yt-img-shadow" alt="" width="168"
+                <img alt="video aside"
                     src="https://i.ytimg.com/vi/Njwjq-0lEGA/hqdefault.jpg?sqp=-oaymwEbCKgBEF5IVfKriqkDDggBFQAAiEIYAXABwAEG&amp;rs=AOn4CLAd8wu3abQghLnp-g5G3XR4Kz5T-A">
                 <div>
                     <h2>Cem Karaca - Barış Manço "Uzun İnce Bir Yoldayım" </h2>
@@ -226,7 +225,7 @@
                 </div>
             </div>
             <div class="aside-video">
-                <img id="img" class="style-scope yt-img-shadow" alt="" width="168"
+                <img alt="aside video"
                     src="https://i.ytimg.com/vi/54bNLGniYV0/hqdefault.jpg?sqp=-oaymwEbCKgBEF5IVfKriqkDDggBFQAAiEIYAXABwAEG&amp;rs=AOn4CLAUVTBRjKagELvt2tKdBAPk1r6ikA">
                 <div>
                     <h2>Şanışer - Kaç Kere Öldün? (Offical Music Video)</h2>
